tooling(workflows): fix dev build staging checks

--- a/.github/workflows/publish_dev.yml
+++ b/.github/workflows/publish_dev.yml
@@ -26,6 +26,7 @@ jobs:
         run: npm run build
 
       - name: Clone staging, prep, and check for changes
+        id: staging
         run: |
           git clone https://${{ github.actor }}:${{ secrets.DOCS_TOKEN }}@github.com/${{ github.repository }}.git -b staging ../staging
           cd ../staging
@@ -42,7 +43,7 @@ jobs:
           echo "##[set-output name=status;]$(git status | grep 'nothing to commit')"
 
       - name: Update staging
-        if: contains(steps.git_status.outputs.status, 'nothing to commit') != true
+        if: contains(steps.staging.outputs.status, 'nothing to commit') != true
         run: |
           cd ../staging
           git config --global user.name "${{ github.actor }}"
@@ -52,12 +53,12 @@ jobs:
           git push origin staging
 
       - name: Generate dev version
-        if: contains(steps.git_status.outputs.status, 'nothing to commit') != true
+        if: contains(steps.staging.outputs.status, 'nothing to commit') != true
         run: |
           npm version $(cat package.json | grep -oP '"version": "\K[^"]+(?=")')-dev.$(git rev-parse --verify HEAD)
 
       - name: Publish to NPM
-        if: contains(steps.git_status.outputs.status, 'nothing to commit') != true
+        if: contains(steps.staging.outputs.status, 'nothing to commit') != true
         run: npm publish --tag dev --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
