tooling(lint-staged): fix lint-staged jest runs
I never realized they weren't actually working until I decided to test it explicitly.
It definitely works now 👍

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,7 +1,7 @@
 {
 	"*.ts": [
 		"eslint",
-		"jest --bail --findRelatedTests"
+		"jest --findRelatedTests -c .jestrc.json"
 	],
 	"*.js": "eslint"
 }
