--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"prebuild": "npm run clean",
 		"postbuild": "node scripts/postbuild",
 		"build:vscode": "npm run lint && npm run test && tsc --extendedDiagnostics",
-		"lint": "eslint src --ext ts",
+		"lint": "eslint . --ext ts,js --ignore-pattern bin",
 		"test": "jest -c .jestrc.json"
 	},
 	"repository": {
@@ -33,7 +33,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^11.0.0",
 		"@commitlint/config-angular": "^11.0.0",
-		"@discord-samba/eslint-config": "discord-samba/eslint-config",
+		"@discord-samba/eslint-config": "github:discord-samba/eslint-config",
 		"@types/glob": "^7.1.1",
 		"@types/jest": "^26.0.9",
 		"@types/node": "^14.14.14",
