--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"#root/*": "./bin/*.js"
 	},
 	"scripts": {
+		"postinstall": "husky install",
 		"clean": "rm -rf bin",
 		"build": "tsc --extendedDiagnostics",
 		"prebuild": "npm run clean",
